--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -230,32 +230,32 @@
                 const Terco = (function () {
                     const mysteries = [
                         {title: 'Mistérios Gozosos', days: ['segunda', 'sábado'], items: [
-                                '1. A Anunciação do Anjo a Maria',
-                                '2. A Visitação de Maria a Santa Isabel',
-                                '3. O Nascimento de Jesus em Belém',
-                                '4. A Apresentação de Jesus no Templo',
-                                '5. O Encontro de Jesus no Templo'
+                                'A Anunciação do Anjo a Maria',
+                                'A Visitação de Maria a Santa Isabel',
+                                'O Nascimento de Jesus em Belém',
+                                'A Apresentação de Jesus no Templo',
+                                'O Encontro de Jesus no Templo'
                             ]},
                         {title: 'Mistérios Dolorosos', days: ['terça', 'sexta'], items: [
-                                '1. A Agonia de Jesus no Horto',
-                                '2. A Flagelação de Jesus',
-                                '3. A Coroação de Espinhos',
-                                '4. Jesus carregando a Cruz',
-                                '5. A Crucificação e Morte de Jesus'
+                                'A Agonia de Jesus no Horto',
+                                'A Flagelação de Jesus',
+                                'A Coroação de Espinhos',
+                                'Jesus carregando a Cruz',
+                                'A Crucificação e Morte de Jesus'
                             ]},
                         {title: 'Mistérios Gloriosos', days: ['quarta', 'domingo'], items: [
-                                '1. A Ressurreição de Jesus',
-                                '2. A Ascensão de Jesus aos Céus',
-                                '3. A Descida do Espírito Santo',
-                                '4. A Assunção de Maria ao Céu',
-                                '5. A Coroação de Maria como Rainha do Céu'
+                                'A Ressurreição de Jesus',
+                                'A Ascensão de Jesus aos Céus',
+                                'A Descida do Espírito Santo',
+                                'A Assunção de Maria ao Céu',
+                                'A Coroação de Maria como Rainha do Céu'
                             ]},
                         {title: 'Mistérios Luminosos', days: ['quinta'], items: [
-                                '1. O Batismo de Jesus no Jordão',
-                                '2. A Autorrevelação nas Bodas de Caná',
-                                '3. O Anúncio do Reino e o convite à conversão',
-                                '4. A Transfiguração',
-                                '5. A Instituição da Eucaristia'
+                                'O Batismo de Jesus no Jordão',
+                                'A Autorrevelação nas Bodas de Caná',
+                                'O Anúncio do Reino e o convite à conversão',
+                                'A Transfiguração',
+                                'A Instituição da Eucaristia'
                             ]}
                     ];
 
