ajuste para remoção de inatividade don onrender.

--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -108,7 +108,7 @@
                 <div class="card">
                     <header>
                         <h1>Santo Terço — Guia interativo</h1>
-                        <p class="lead">Clique nas contas para acompanhar o progresso. O mistério do dia segue a ordem visual do roolscreem.</p>
+                        <p class="lead">Clique nas contas para acompanhar o progresso.</p>
                     </header>
                 </div>
 
