ajuste para remoção de inatividade do onrender. ajustes iniciais para inserção da liturgia

--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -191,38 +191,46 @@
                     </div>
                 </div>
 
-                <footer id="footer">
-                    <div style="text-align:center; margin:16px 0;">
+                <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
+
+                    <!-- Botões de contato -->
+                    <div style="margin:16px 0;">
                         <!-- WhatsApp -->
                         <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
                            target="_blank"
-                           style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin-right:8px;">
+                           style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
                             💬 WhatsApp
                         </a>
 
                         <!-- Email -->
                         <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
                            onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
-                           style="
-                           display: inline-block;
-                           background: #39588f;
-                           color: white;
-                           padding: 10px 16px;
-                           border-radius: 8px;
-                           text-decoration: none;
-                           font-weight: bold;
-                           margin-right: 8px;
-                           transition: background 0.3s ease;
-                           ">
+                           style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
                             📧 Email
                         </a>
-
                     </div>
 
-                    <p class="muted" style="text-align:center; font-size:.88rem; color:#444;">
+                    <!-- Texto -->
+                    <p style="font-size:.88rem; color:#444; margin:8px 0;">
                         Este rodapé pode conter informações de contato, links úteis, reflexões espirituais e avisos importantes.
                     </p>
+
+                    <!-- Desenvolvedor -->
+                    <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
+                        Desenvolvido por <strong>FS Tech</strong>
+                    </div>
+
+                    <!-- Contato final -->
+                    <div style="margin-top:8px;">
+                        <i class="pi pi-whatsapp" style="color:#25D366;"></i>
+                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
+                           target="_blank"
+                           style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
+                            +55 (84) 99993-7274
+                        </a>
+                    </div>
                 </footer>
+
             </div>
 
             <script type="text/javascript">
