correção dos misterios por dia.

--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -237,28 +237,28 @@
                 //<![CDATA[
                 const Terco = (function () {
                     const mysteries = [
-                        {title: 'Mistérios Gozosos', days: ['segunda', 'sábado'], items: [
+                        {title: 'Mistérios Gozosos', days: ['segunda-feira', 'sábado'], items: [
                                 'A Anunciação do Anjo a Maria',
                                 'A Visitação de Maria a Santa Isabel',
                                 'O Nascimento de Jesus em Belém',
                                 'A Apresentação de Jesus no Templo',
                                 'O Encontro de Jesus no Templo'
                             ]},
-                        {title: 'Mistérios Dolorosos', days: ['terça', 'sexta'], items: [
+                        {title: 'Mistérios Dolorosos', days: ['terça-feira', 'sexta'], items: [
                                 'A Agonia de Jesus no Horto',
                                 'A Flagelação de Jesus',
                                 'A Coroação de Espinhos',
                                 'Jesus carregando a Cruz',
                                 'A Crucificação e Morte de Jesus'
                             ]},
-                        {title: 'Mistérios Gloriosos', days: ['quarta', 'domingo'], items: [
+                        {title: 'Mistérios Gloriosos', days: ['quarta-feira', 'domingo'], items: [
                                 'A Ressurreição de Jesus',
                                 'A Ascensão de Jesus aos Céus',
                                 'A Descida do Espírito Santo',
                                 'A Assunção de Maria ao Céu',
                                 'A Coroação de Maria como Rainha do Céu'
                             ]},
-                        {title: 'Mistérios Luminosos', days: ['quinta'], items: [
+                        {title: 'Mistérios Luminosos', days: ['quinta-feira'], items: [
                                 'O Batismo de Jesus no Jordão',
                                 'A Autorrevelação nas Bodas de Caná',
                                 'O Anúncio do Reino e o convite à conversão',
