ajuste dos dias.

--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -244,7 +244,7 @@
                                 'A Apresentação de Jesus no Templo',
                                 'O Encontro de Jesus no Templo'
                             ]},
-                        {title: 'Mistérios Dolorosos', days: ['terça-feira', 'sexta'], items: [
+                        {title: 'Mistérios Dolorosos', days: ['terça-feira', 'sexta-feira'], items: [
                                 'A Agonia de Jesus no Horto',
                                 'A Flagelação de Jesus',
                                 'A Coroação de Espinhos',
