adição da liturgia diária e retorno para wildfly (Tomcat dá muito trabalho).

--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -103,6 +103,7 @@
                     <a href="#todayMystery">Mistério do dia</a>
                     <a href="#tutorial">Tutorial</a>
                     <a href="#footer">Contato</a>
+                    <a href="liturgia.xhtml">Liturgia</a>
                 </nav>
 
                 <div class="card">
