--- a/src/main/webapp/liturgia.xhtml
+++ b/src/main/webapp/liturgia.xhtml
@@ -1,104 +1,45 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h:head>
-        <title>📖 Liturgia do Dia - FS Tech</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/primeicons/12.1.0/primeicons.min.css"/>
-        <style>
-            .liturgia-panel {
-                width: 95%;
-                max-width: 1000px;
-                margin: auto;
-                margin-top: 20px;
+      xmlns:p="http://primefaces.org/ui">
+
+<h:head>
+    <title>Liturgia do Dia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <style>
+        .container {
+            width: 100%;
+            max-width: 900px;
+            margin: auto;
+            padding: 10px;
+        }
+
+        .titulo {
+            font-size: 22px;
+            font-weight: bold;
+            margin: 15px 0;
+            text-align: center;
+        }
+
+        /* Ajustes mobile */
+        @media (max-width: 600px) {
+            .titulo {
+                font-size: 18px;
             }
-
-            /* Títulos */
-            .section-title {
-                font-weight: bold;
-                margin-top: 10px;
-                margin-bottom: 5px;
+            .ui-panelgrid .ui-grid-col-6 {
+                width: 100% !important;
+                display: block;
             }
+        }
+    </style>
+</h:head>
 
-            /* Controles superiores */
-            .top-controls {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
-                flex-wrap: wrap;
-                gap: 10px;
-            }
+<h:body>
+    <h:form id="formLiturgia">
+        <div class="container">
 
-            /* --- Responsividade --- */
-            @media screen and (max-width: 992px) {
-                .liturgia-panel {
-                    width: 98%;
-                }
-                .top-controls {
-                    flex-direction: column;
-                    align-items: stretch;
-                }
-                .top-controls .ui-calendar,
-                .top-controls .ui-button {
-                    width: 100%;
-                }
-            }
-
-            @media screen and (max-width: 768px) {
-                .ui-panel-titlebar {
-                    font-size: 1.1em;
-                    text-align: center;
-                }
-                .section-title {
-                    font-size: 1em;
-                }
-                .liturgia-panel {
-                    padding: 10px;
-                }
-
-                /* PanelGrid: força 1 coluna no mobile */
-                .ui-panelgrid td {
-                    display: block;
-                    width: 100% !important;
-                    box-sizing: border-box;
-                    padding: 6px 0;
-                }
-                .ui-panelgrid .label {
-                    font-weight: bold;
-                    margin-top: 8px;
-                }
-                .ui-panelgrid .value {
-                    margin-bottom: 8px;
-                }
-
-                /* Accordion ocupa toda a largura */
-                .ui-accordion, .ui-accordion .ui-accordion-content {
-                    width: 100% !important;
-                }
-
-                /* Footer mais compacto */
-                #footer {
-                    font-size: 0.9em;
-                    padding: 16px;
-                }
-                #footer a {
-                    display: block;
-                    margin: 6px auto;
-                    text-align: center;
-                }
-            }
-        </style>
-    </h:head>
-    <h:body>
-
-        <h:form id="liturgiaForm">
-
-            <p:panel id="liturgiaPanelWrapper" header="📖 Liturgia do Dia" styleClass="liturgia-panel">
-
-                <!-- Top controls: Calendar e botão voltar -->
-                <div class="top-controls">
+            <div class="titulo">📖 Liturgia do Dia</div>
+<div class="top-controls">
                     <p:calendar id="dataPicker" value="#{liturgiaBean.dataSelecionada}" pattern="dd/MM/yyyy" 
                                 navigator="true" showButtonPanel="true">
                         <p:ajax event="dateSelect" listener="#{liturgiaBean.carregarLiturgiaPorData(liturgiaBean.dataSelecionada)}" update="liturgiaPanelWrapper"/>
@@ -106,80 +47,41 @@
 
                     <p:button value="🔙 Voltar para o Terço" outcome="/santo_terco.xhtml" icon="pi pi-arrow-left"/>
                 </div>
-
-                <!-- Dados principais -->
-                <p:panelGrid id="liturgiaPanel" columns="2" columnClasses="label,value" style="width:100%; margin-bottom:20px;">
-                    <h:outputText value="Data:" />
+            <!-- Informações principais -->
+            <p:panel header="Informações" style="margin-bottom:15px;">
+                <p:panelGrid columns="2" columnClasses="ui-grid-col-6,ui-grid-col-6" layout="grid" style="width:100%;">
+                    <h:outputText value="Data:"/>
                     <h:outputText value="#{liturgiaBean.liturgia.data}" />
 
-                    <h:outputText value="Liturgia:" />
-                    <h:outputText value="#{liturgiaBean.liturgia.liturgia}" />
+                    <h:outputText value="Liturgia:"/>
+                    <h:outputText value="#{liturgiaBean.liturgia.nome}" />
 
-                    <h:outputText value="Cor Litúrgica:" />
+                    <h:outputText value="Cor Litúrgica:"/>
                     <h:outputText value="#{liturgiaBean.liturgia.cor}" />
                 </p:panelGrid>
-
-                <!-- Accordion para seções -->
-                <p:accordionPanel multiple="true" style="width:100%">
-
-                    <!-- Orações -->
-                    <p:tab title="Orações">
-                        <p:panelGrid columns="1" style="width:100%">
-                            <h:outputText value="Coleta:" styleClass="section-title"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.oracoes.coleta}" escape="false" />
-
-                            <h:outputText value="Oferendas:" styleClass="section-title"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.oracoes.oferendas}" escape="false" />
-
-                            <h:outputText value="Comunhão:" styleClass="section-title"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.oracoes.comunhao}" escape="false" />
-                        </p:panelGrid>
-                    </p:tab>
-
-                    <!-- Leituras -->
-                    <p:tab title="Leituras">
-                        <p:panelGrid columns="1" style="width:100%">
-                            <h:outputText value="Primeira Leitura:" styleClass="section-title"/>
-                            <ui:repeat value="#{liturgiaBean.liturgia.leituras.primeiraLeitura}" var="leitura">
-                                <p:panel style="margin-bottom:10px;">
-                                    <h:outputText value="#{leitura.titulo} (#{leitura.referencia})" style="font-weight:bold;"/>
-                                    <h:outputText value="#{leitura.texto}" escape="false"/>
-                                </p:panel>
-                            </ui:repeat>
-
-                            <h:outputText value="Salmo:" styleClass="section-title"/>
-                            <ui:repeat value="#{liturgiaBean.liturgia.leituras.salmo}" var="salmo">
-                                <p:panel style="margin-bottom:10px;">
-                                    <h:outputText value="#{salmo.referencia}" style="font-weight:bold;"/>
-                                    <h:outputText value="#{salmo.refrao}" style="font-style:italic;"/><br/>
-                                    <h:outputText value="#{salmo.texto}" escape="false"/>
-                                </p:panel>
-                            </ui:repeat>
-
-                            <h:outputText value="Evangelho:" styleClass="section-title"/>
-                            <ui:repeat value="#{liturgiaBean.liturgia.leituras.evangelho}" var="evangelho">
-                                <p:panel style="margin-bottom:10px;">
-                                    <h:outputText value="#{evangelho.titulo} (#{evangelho.referencia})" style="font-weight:bold;"/>
-                                    <h:outputText value="#{evangelho.texto}" escape="false"/>
-                                </p:panel>
-                            </ui:repeat>
-                        </p:panelGrid>
-                    </p:tab>
-
-                    <!-- Antífonas -->
-                    <p:tab title="Antífonas">
-                        <p:panelGrid columns="1" style="width:100%">
-                            <h:outputText value="Entrada:" styleClass="section-title"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.antifonas.entrada}" escape="false"/>
-
-                            <h:outputText value="Comunhão:" styleClass="section-title"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.antifonas.comunhao}" escape="false"/>
-                        </p:panelGrid>
-                    </p:tab>
-
-                </p:accordionPanel>
             </p:panel>
-            <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
+
+            <!-- Seções com accordion -->
+            <p:accordionPanel multiple="true" style="margin-bottom:15px;">
+
+                <p:tab title="Orações">
+                    <p><b>Coleta:</b> #{liturgiaBean.liturgia.coleta}</p>
+                    <p><b>Oferendas:</b> #{liturgiaBean.liturgia.oferendas}</p>
+                    <p><b>Comunhão:</b> #{liturgiaBean.liturgia.comunhao}</p>
+                </p:tab>
+
+                <p:tab title="Leituras">
+                    <h:outputText value="#{liturgiaBean.liturgia.leituras}" escape="false"/>
+                </p:tab>
+
+                <p:tab title="Antífonas">
+                    <h:outputText value="#{liturgiaBean.liturgia.antifonas}" escape="false"/>
+                </p:tab>
+
+            </p:accordionPanel>
+
+        </div>
+<footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
 
                 <!-- Botões de contato -->
                 <div style="margin:16px 0;">
@@ -198,11 +100,6 @@
                     </a>
                 </div>
 
-                <!-- Texto -->
-                <p style="font-size:.88rem; color:#444; margin:8px 0;">
-                    Este rodapé pode conter informações de contato, links úteis, reflexões espirituais e avisos importantes.
-                </p>
-
                 <!-- Desenvolvedor -->
                 <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
                     Desenvolvido por <strong>FS Tech</strong>
@@ -218,6 +115,6 @@
                     </a>
                 </div>
             </footer>
-        </h:form>
-    </h:body>
+    </h:form>
+</h:body>
 </html>
