--- a/src/main/webapp/liturgia.xhtml
+++ b/src/main/webapp/liturgia.xhtml
@@ -3,118 +3,120 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
-<h:head>
-    <title>Liturgia do Dia</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <style>
-        .container {
-            width: 100%;
-            max-width: 900px;
-            margin: auto;
-            padding: 10px;
-        }
+    <h:head>
+        <title>Liturgia do Dia</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <style>
+            .container {
+                width: 100%;
+                max-width: 900px;
+                margin: auto;
+                padding: 10px;
+            }
 
-        .titulo {
-            font-size: 22px;
-            font-weight: bold;
-            margin: 15px 0;
-            text-align: center;
-        }
-
-        /* Ajustes mobile */
-        @media (max-width: 600px) {
             .titulo {
-                font-size: 18px;
+                font-size: 22px;
+                font-weight: bold;
+                margin: 15px 0;
+                text-align: center;
             }
-            .ui-panelgrid .ui-grid-col-6 {
-                width: 100% !important;
-                display: block;
+
+            /* Ajustes mobile */
+            @media (max-width: 600px) {
+                .titulo {
+                    font-size: 18px;
+                }
+                .ui-panelgrid .ui-grid-col-6 {
+                    width: 100% !important;
+                    display: block;
+                }
             }
-        }
-    </style>
-</h:head>
+        </style>
+    </h:head>
 
-<h:body>
-    <h:form id="formLiturgia">
-        <div class="container">
+    <h:body>
+        <h:form id="formLiturgia">
+            <p:panel id="liturgiaPanelWrapper" header="📖 Liturgia do Dia" styleClass="liturgia-panel">
+                <div class="container">
 
-            <div class="titulo">📖 Liturgia do Dia</div>
-<div class="top-controls">
-                    <p:calendar id="dataPicker" value="#{liturgiaBean.dataSelecionada}" pattern="dd/MM/yyyy" 
-                                navigator="true" showButtonPanel="true">
-                        <p:ajax event="dateSelect" listener="#{liturgiaBean.carregarLiturgiaPorData(liturgiaBean.dataSelecionada)}" update="liturgiaPanelWrapper"/>
-                    </p:calendar>
+                    <div class="titulo">📖 Liturgia do Dia</div>
+                    <div class="top-controls">
+                        <p:calendar id="dataPicker" value="#{liturgiaBean.dataSelecionada}" pattern="dd/MM/yyyy" 
+                                    navigator="true" showButtonPanel="true">
+                            <p:ajax event="dateSelect" listener="#{liturgiaBean.carregarLiturgiaPorData(liturgiaBean.dataSelecionada)}" update="liturgiaPanelWrapper"/>
+                        </p:calendar>
 
-                    <p:button value="🔙 Voltar para o Terço" outcome="/santo_terco.xhtml" icon="pi pi-arrow-left"/>
+                        <p:button value="🔙 Voltar para o Terço" outcome="/santo_terco.xhtml" icon="pi pi-arrow-left"/>
+                    </div>
+                    <!-- Informações principais -->
+                    <p:panel header="Informações" style="margin-bottom:15px;">
+                        <p:panelGrid columns="2" columnClasses="ui-grid-col-6,ui-grid-col-6" layout="grid" style="width:100%;">
+                            <h:outputText value="Data:"/>
+                            <h:outputText value="#{liturgiaBean.liturgia.data}" />
+
+                            <h:outputText value="Liturgia:"/>
+                            <h:outputText value="#{liturgiaBean.liturgia.nome}" />
+
+                            <h:outputText value="Cor Litúrgica:"/>
+                            <h:outputText value="#{liturgiaBean.liturgia.cor}" />
+                        </p:panelGrid>
+                    </p:panel>
+
+                    <!-- Seções com accordion -->
+                    <p:accordionPanel multiple="true" style="margin-bottom:15px;">
+
+                        <p:tab title="Orações">
+                            <p><b>Coleta:</b> #{liturgiaBean.liturgia.coleta}</p>
+                            <p><b>Oferendas:</b> #{liturgiaBean.liturgia.oferendas}</p>
+                            <p><b>Comunhão:</b> #{liturgiaBean.liturgia.comunhao}</p>
+                        </p:tab>
+
+                        <p:tab title="Leituras">
+                            <h:outputText value="#{liturgiaBean.liturgia.leituras}" escape="false"/>
+                        </p:tab>
+
+                        <p:tab title="Antífonas">
+                            <h:outputText value="#{liturgiaBean.liturgia.antifonas}" escape="false"/>
+                        </p:tab>
+
+                    </p:accordionPanel>
+
                 </div>
-            <!-- Informações principais -->
-            <p:panel header="Informações" style="margin-bottom:15px;">
-                <p:panelGrid columns="2" columnClasses="ui-grid-col-6,ui-grid-col-6" layout="grid" style="width:100%;">
-                    <h:outputText value="Data:"/>
-                    <h:outputText value="#{liturgiaBean.liturgia.data}" />
+                <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
 
-                    <h:outputText value="Liturgia:"/>
-                    <h:outputText value="#{liturgiaBean.liturgia.nome}" />
+                    <!-- Botões de contato -->
+                    <div style="margin:16px 0;">
+                        <!-- WhatsApp -->
+                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
+                           target="_blank"
+                           style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
+                            💬 WhatsApp
+                        </a>
 
-                    <h:outputText value="Cor Litúrgica:"/>
-                    <h:outputText value="#{liturgiaBean.liturgia.cor}" />
-                </p:panelGrid>
+                        <!-- Email -->
+                        <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
+                           onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
+                           style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
+                            📧 Email
+                        </a>
+                    </div>
+
+                    <!-- Desenvolvedor -->
+                    <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
+                        Desenvolvido por <strong>FS Tech</strong>
+                    </div>
+
+                    <!-- Contato final -->
+                    <div style="margin-top:8px;">
+                        <i class="pi pi-whatsapp" style="color:#25D366;"></i>
+                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
+                           target="_blank"
+                           style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
+                            +55 (84) 99993-7274
+                        </a>
+                    </div>
+                </footer>
             </p:panel>
-
-            <!-- Seções com accordion -->
-            <p:accordionPanel multiple="true" style="margin-bottom:15px;">
-
-                <p:tab title="Orações">
-                    <p><b>Coleta:</b> #{liturgiaBean.liturgia.coleta}</p>
-                    <p><b>Oferendas:</b> #{liturgiaBean.liturgia.oferendas}</p>
-                    <p><b>Comunhão:</b> #{liturgiaBean.liturgia.comunhao}</p>
-                </p:tab>
-
-                <p:tab title="Leituras">
-                    <h:outputText value="#{liturgiaBean.liturgia.leituras}" escape="false"/>
-                </p:tab>
-
-                <p:tab title="Antífonas">
-                    <h:outputText value="#{liturgiaBean.liturgia.antifonas}" escape="false"/>
-                </p:tab>
-
-            </p:accordionPanel>
-
-        </div>
-<footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
-
-                <!-- Botões de contato -->
-                <div style="margin:16px 0;">
-                    <!-- WhatsApp -->
-                    <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
-                       target="_blank"
-                       style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                        💬 WhatsApp
-                    </a>
-
-                    <!-- Email -->
-                    <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
-                       onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
-                       style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                        📧 Email
-                    </a>
-                </div>
-
-                <!-- Desenvolvedor -->
-                <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
-                    Desenvolvido por <strong>FS Tech</strong>
-                </div>
-
-                <!-- Contato final -->
-                <div style="margin-top:8px;">
-                    <i class="pi pi-whatsapp" style="color:#25D366;"></i>
-                    <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
-                       target="_blank"
-                       style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
-                        +55 (84) 99993-7274
-                    </a>
-                </div>
-            </footer>
-    </h:form>
-</h:body>
+        </h:form>
+    </h:body>
 </html>
