--- a/src/main/webapp/liturgia.xhtml
+++ b/src/main/webapp/liturgia.xhtml
@@ -51,14 +51,14 @@
                     <!-- Informações principais -->
                     <p:panel header="Informações" style="margin-bottom:15px;">
                         <p:panelGrid columns="2" columnClasses="ui-grid-col-6,ui-grid-col-6" layout="grid" style="width:100%;">
-                            <h:outputText value="Data:"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.data}" />
+                            <h:outputText value="Data:" />
+                    <h:outputText value="#{liturgiaBean.liturgia.data}" />
 
-                            <h:outputText value="Liturgia:"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.nome}" />
+                    <h:outputText value="Liturgia:" />
+                    <h:outputText value="#{liturgiaBean.liturgia.liturgia}" />
 
-                            <h:outputText value="Cor Litúrgica:"/>
-                            <h:outputText value="#{liturgiaBean.liturgia.cor}" />
+                    <h:outputText value="Cor Litúrgica:" />
+                    <h:outputText value="#{liturgiaBean.liturgia.cor}" />
                         </p:panelGrid>
                     </p:panel>
 
