--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -104,6 +104,7 @@
                     <a href="#tutorial">Tutorial</a>
                     <a href="#footer">Contato</a>
                     <a href="liturgia.xhtml">Liturgia</a>
+                    <a href="quaresma-sao-miguel.xhtml">Quaresma de São Miguel</a>
                 </nav>
 
                 <div class="card">
