Ajustes no layout da quaresma

--- a/src/main/webapp/quaresma-sao-miguel.xhtml
+++ b/src/main/webapp/quaresma-sao-miguel.xhtml
@@ -49,19 +49,20 @@
                               rendered="#{quaresmaSaoMiguelBean.diaQuaresma != -1}">
 
                 <p:tab title="Preparação Diária">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.preparacaoDiaria}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.preparacaoDiaria}</pre>
                 </p:tab>
 
                 <p:tab title="1. Oração Inicial">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.oracaoDiariaInicial}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.oracaoDiariaInicial}</pre>
                 </p:tab>
 
                 <p:tab title="2. Exame de Consciência">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.exameConsciencia}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.exameConsciencia}</pre>
                 </p:tab>
 
                 <p:tab title="3. Leitura Bíblica">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.leituraDoDia}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.leituraBiblica}</pre>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.leituraDoDia}</pre>
                 </p:tab>
 
                 <p:tab title="4. Ladainha de São Miguel">
@@ -69,19 +70,19 @@
                 </p:tab>
 
                 <p:tab title="5. Consagração">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.consagracaoSaoMiguel}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.consagracaoSaoMiguel}</pre>
                 </p:tab>
 
                 <p:tab title="6. Oração Final">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.oracaoFinal}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.oracaoFinal}</pre>
                 </p:tab>
 
                 <p:tab title="7. Augusta Rainha">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.oracaoAugustaRainha}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.oracaoAugustaRainha}</pre>
                 </p:tab>
 
                 <p:tab title="8. Oferenda Final">
-                    <h:outputText value="#{quaresmaSaoMiguelBean.oferendaFinal}" escape="false"/>
+                    <pre style="white-space: pre-line;">#{quaresmaSaoMiguelBean.oferendaFinal}</pre>
                 </p:tab>
 
                 <p:tab title="9. Orações Finais">
