--- a/src/main/webapp/quaresma-sao-jose.xhtml
+++ b/src/main/webapp/quaresma-sao-jose.xhtml
@@ -61,7 +61,7 @@
 
             <!-- Título -->
             <h1 style="text-align:center; color:darkred;">
-                Quaresma de São Miguel Arcanjo
+                Quaresma de São José
             </h1>
 
             <!-- Calendário e botão de retorno -->
