Atualizar o santo_terco.xhtml

--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -109,6 +109,9 @@
                         <a href="quaresma-sao-miguel.xhtml">Quaresma de São Miguel</a>
                     </h:panelGroup>
 
+ <h:panelGroup rendered="#{quaresmaSaoJoseBean.quaresmaJose}">
+                        <a href="quaresma-sao-jose.xhtml">Quaresma de São Jose</a>
+                    </h:panelGroup>
                 </nav>
 
                 <div class="card">
