ajustes para spring boot

--- a/src/main/webapp/liturgia.xhtml
+++ b/src/main/webapp/liturgia.xhtml
@@ -37,7 +37,7 @@
 
     <h:body>
         <h:form id="formLiturgia">
-            <p:panel id="liturgiaPanelWrapper" header="📖 Liturgia do Dia" styleClass="liturgia-panel">
+            <p:panel id="liturgiaPanelWrapper" styleClass="liturgia-panel">
                 <div class="container">
 
                     <div class="titulo">📖 Liturgia do Dia</div>
